@@ -1,3 +1,8 @@
+2010-02-01  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-bzr.el (vc-bzr-dir-extra-headers): Add a header when a
+	pending merge is detected.
+
 2010-01-31  Juri Linkov  <juri@jurta.org>
 
 	* progmodes/grep.el (zrgrep): Call `grep-compute-defaults' at the
